*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.24 ===
* Fixed improper port bindings for delay x2 stereo.

=== 1.0.23 ===
* Updated build scripts and dependencies.

=== 1.0.22 ===
* Updated build scripts and dependencies.

=== 1.0.21 ===
* Fixed improper units for the output delay value.
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Fixed buffer overflow on large input buffers.
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Added phase switches.
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Fixed invalid version number in metadata.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Updated plugin metadata (contributed by Dennis Braun).
* Updated dependencies and build scripts.

=== 1.0.3 ===
* Initial release.
