@@ -51,8 +51,8 @@ LINUX_DEPENDENCIES = \
   LIBX11 \
   LIBXRANDR \
   LIBGL \
-  LIBJACK \
   LIBGSTREAMER_AUDIO \
+  LIBJACK \
   LSP_R3D_GLX_LIB
 
 LINUX_TEST_DEPENDENCIES =
@@ -76,8 +76,8 @@ BSD_DEPENDENCIES = \
   LIBX11 \
   LIBXRANDR \
   LIBGL \
-  LIBJACK \
   LIBGSTREAMER_AUDIO \
+  LIBJACK \
   LSP_R3D_GLX_LIB
 
 BSD_TEST_DEPENDENCIES = 
