@@ -4,6 +4,7 @@
 
 === 1.0.24 ===
 * Fixed improper port bindings for delay x2 stereo.
+* Updated build scripts and dependencies.
 
 === 1.0.23 ===
 * Updated build scripts and dependencies.
